syntax = "proto3";
import "uuid.proto";
import "google/protobuf/timestamp.proto";
import "property.proto";

option java_package = "dev.usbharu.owl";

message ReadyRequest {
  int32 number_of_concurrent = 1;
  UUID consumer_id = 2;
}

message TaskRequest {
  string name = 1;
  UUID id = 2;
  int32 attempt = 4;
  google.protobuf.Timestamp queuedAt = 5;
  map<string, string> properties = 6;
}

service AssignmentTaskService {
  rpc ready (stream ReadyRequest) returns (stream TaskRequest);
}